--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ backports.weakref==1.0.post1
 
 blinker==1.4
 brotlipy==0.7.0
-clyent==1.2.2
+clyent==1.2.1
 constantly==15.1.0
 cssselect==1.1.0
 datashape==0.5.4
@@ -44,9 +44,9 @@ protobuf==3.20.3
 pyarrow==8.0.0
 
 pyasn1-modules==0.2.8
-
+numpy==1.18.1
 pycurl==7.45.1
-
+plotly
 PyDispatcher==2.0.5
 pyls-spyder==0.4.0
 PyQt5-sip==12.11.0
@@ -55,6 +55,7 @@ python-lsp-jsonrpc==1.0.0
 queuelib==1.5.0
 requests-oauthlib==1.3.0
 scipy==1.10.0
+streamlit==1.1.*
 TBB==0.2
 torch==1.12.1
 webencodings==0.5.1
